<resources>
    <string name="app_name">Scoperoid</string>

    <string name="action_settings">Settings</string>
    <string name="logo">Rigol logo</string>
    <string name="ch1_short">Ch 1</string>
    <string name="ch2_short">Ch 2</string>
    <string name="ch3_short">Ch 3</string>
    <string name="ch4_short">Ch 4</string>
    <string name="start_stop">Run/Stop</string>
    <string name="timebase">H %1$.2f%2$s</string>
    <string name="timeoffset">D %1$.2f%2$s</string>
    <string name="seconds">s</string>
    <string name="milliseconds">ms</string>
    <string name="microseconds">μs</string>
    <string name="nanoseconds">ns</string>
    <string name="picoseconds">ps</string>
    <string name="vscale">%1$.2f%2$s</string>
    <string name="volts">V</string>
    <string name="millivolts">mV</string>
</resources>
